corrected table overflow

--- a/web/client/components/Nav/style.css
+++ b/web/client/components/Nav/style.css
@@ -4,6 +4,8 @@
   display: flex;
   justify-content: space-around;
   padding: 1rem 2rem;
+  position: relative;
+  z-index: 1;
 }
 
 @media (min-width: 500px) {
